--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,14 @@
         </activity>
         <activity
             android:name=".controller.DetailActivity"
-            android:parentActivityName=".controller.MainActivity"
-            android:label="@string/details">
+            android:parentActivityName=".controller.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".controller.MainActivity" />
         </activity>
+        <activity
+            android:name=".web"
+            android:label="Developer Contact"></activity>
     </application>
 
 </manifest>
